samples/_failures_safe/1761252559_cef526_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2238ddaa.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2238ddaa.c:162:27: error: expected ‘]’ at end of input
  162 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_2238ddaa.c:162:9: error: expected declaration or statement at end of input
  162 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_2238ddaa.c:162:9: error: expected declaration or statement at end of input
